# porsmo

./: Cargo.toml  LICENSE  README.md  README.org  logging_config.yaml
porsmo/: Cargo.toml  README.md
porsmo-gui/: Cargo.toml
porsmo-gui/src/: main.rs
porsmo-term/: Cargo.toml
porsmo-term/src/: input.rs  main.rs  pomodoro.rs  stopwatch.rs  terminal.rs  timer.rs
porsmo/src/: counter.rs  pomodoro.rs  stopwatch.rs  timer.rs
porsmo_helpers/: Cargo.toml
porsmo_helpers/src/: alert.rs  format.rs  lib.rs  notification.rs  sound.rs
src/: alert.rs  cli.rs  clock.rs  config.rs  countdown.rs  counter.rs  error.rs  format.rs  input.rs  lib.rs  main.rs  notification.rs  pomodoro.rs  pomodoro_term.rs  prelude.rs  stopwatch.rs  stopwatch_term.rs  terminal.rs  timer.rs  timer_term.rs
src/pomodoro/: mod.rs  pomoconfig.rs  pomomode.rs  pomosession.rs
src/porsmo/: .pomodoro.rs.rustfmt  alert.rs  app.rs  cli.rs  error.rs  format.rs  input.rs  main.rs  pomodoro.rs  pomodoro_term.rs  prelude.rs  sound.rs  stopwatch.rs  stopwatch_term.rs  terminal.rs  timer.rs  timer_term.rs
