[package]
name = "porsmo"
version = "0.3.3"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A pomodoro, timer and stopwatch, all in one app"
homepage = "https://github.com/ColorCookie-dev/porsmo"
repository = "https://github.com/ColorCookie-dev/porsmo"
keywords = ["cli", "pomodoro", "timer", "countdown"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
rodio = "0.12.0"
crossterm = "0.26.1"
clap = { version = "4.3.0", features = ["derive"] }
thiserror = "1.0.43"
