[package]
name = "porsmo"
version = "0.3.4"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A pomodoro, timer and stopwatch, all in one app"
homepage = "https://github.com/ColorCookie-dev/porsmo"
repository = "https://github.com/ColorCookie-dev/porsmo"
keywords = ["cli", "pomodoro", "timer", "countdown"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
anyhow = "1.0.100"
notify-rust = "4.11.7"
clap = { version = "4.5.53", features = ["derive"] }
rodio = "0.21.1"
mac-notification-sys = "0.6.9"
notifica = "3.0.2"
