[package]
name = "porsmo-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
porsmo = { path = "../porsmo" }
porsmo_helpers = { path = "../porsmo_helpers" }
log = "0.4"
log4rs = "1.0.0"
eframe = "0.17.0"
