[package]
name = "porsmo-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
porsmo = { path = "../porsmo" }
porsmo_helpers = { path = "../porsmo_helpers" }
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
termion = "1.5.5"
log = "0.4"
log4rs = "1.0.0"
