[package]
name = "porsmo"
version = "0.1.3"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A pomodoro, timer and stopwatch, all in one app"
homepage = "https://github.com/ColorCookie-dev/porsmo"
repository = "https://github.com/ColorCookie-dev/porsmo"
keywords = ["cli", "pomodoro", "timer", "countdown"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
